fixed issue with 401 received as a true error
