# packages/websdk3/openapi.yaml
@@ -886,6 +886,77 @@ paths:
           required: false
           schema:
             type: string
+  /fido2/v2/mfa/passkey/tx:
+    post:
+      tags:
+        - mfa
+      summary: Transaction confirmation using passkey.
+      description: Confirm a transaction with a passkey.
+      operationId: mfa#mfaPasskeyTx
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MfaPasskeyAuthRequestBody'
+            example:
+              assertionResult:
+                authenticatorData: ix523n3XniH01jM4CIuOn1z0Jw6QbRATXYOsCUyQN...
+                clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
+                credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
+                signature: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
+                userHandle: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
+      responses:
+        '200':
+          description: OK response.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mfa'
+              example:
+                accessToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NT...
+                deviceId: 8222fe14-4973-469f-843d-73b0f9e0a3a9
+                flow: signIn
+                idToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NT...
+                payload: JfeMhXGH1GABxRAXRopd7vtsLEJe16f9ok3oiA8DoEADZ8TOqvgYy...
+                payloadSignature: eyJhbGciOiJIUzI1NiJ9.ew0KICAic3ViIjogIjEyMzQ1Njc4OTAiLA...
+                refreshToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NT...
+        '400':
+          description: 'bad_request: Bad Request response.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+              example:
+                msg: Internal error
+                msgCode: internal_error
+        '401':
+          description: 'unauthorized: Unauthorized response.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+              example:
+                msg: Internal error
+                msgCode: internal_error
+        '500':
+          description: 'internal_error: Internal Server Error response.'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AppError'
+              example:
+                msg: Internal error
+                msgCode: internal_error
+      security:
+        - mfaSession_header_Authorization: []
+      parameters:
+        - name: Authorization
+          in: header
+          description: JWT Authorization header
+          required: false
+          schema:
+            type: string
   /fido2/v2/mfa/third-party/verify:
     post:
       tags:
@@ -971,76 +1042,6 @@ paths:
                       - label: +1(661)942-5456
                         value: 3e3092dc-eb0c-4064-9276-7687fe5cef57
                 session: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
-        '500':
-          description: 'internal_error: Internal Server Error response.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-              example:
-                msg: Internal error
-                msgCode: internal_error
-      security:
-        - mfaSession_header_Authorization: []
-      parameters:
-        - name: Authorization
-          in: header
-          description: JWT Authorization header
-          required: false
-          schema:
-            type: string
-  /fido2/v2/mfa/tx/complete:
-    post:
-      tags:
-        - mfa
-      summary: Transaction confirmation using passkey.
-      description: Confirm a transaction with a passkey.
-      operationId: mfa#mfaTxComplete
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/MfaPasskeyAuthRequestBody'
-            example:
-              assertionResult:
-                authenticatorData: ix523n3XniH01jM4CIuOn1z0Jw6QbRATXYOsCUyQN...
-                clientDataJSON: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
-                credentialId: 2aChi2dALRLdVP5i/zKr7yvMrP8FIy7MK4lbyUsjO...
-                signature: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
-                userHandle: UxaynsCYdykyHKaA0G7IeWaBG6DGJoGFN8mbJgvRo...
-      responses:
-        '200':
-          description: OK response.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Mfa'
-              example:
-                accessToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NT...
-                flow: signIn
-                idToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NT...
-                payload: JfeMhXGH1GABxRAXRopd7vtsLEJe16f9ok3oiA8DoEADZ8TOqvgYy...
-                payloadSignature: eyJhbGciOiJIUzI1NiJ9.ew0KICAic3ViIjogIjEyMzQ1Njc4OTAiLA...
-                refreshToken: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NT...
-        '400':
-          description: 'bad_request: Bad Request response.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-              example:
-                msg: Internal error
-                msgCode: internal_error
-        '401':
-          description: 'unauthorized: Unauthorized response.'
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/AppError'
-              example:
-                msg: Internal error
-                msgCode: internal_error
         '500':
           description: 'internal_error: Internal Server Error response.'
           content:
